--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.19.0",
     "vconsole": "^3.15.1",
     "zustand": "^4.4.6"
@@ -31,6 +32,7 @@
     "@types/node": "^20.9.3",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
+    "@types/react-input-mask": "^3.0.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.54.0",
     "eslint-config-code-style-lint-react-ts": "^3.0.9",
