--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.19.0",
     "vconsole": "^3.15.1",
